--- a/express-api/package.json
+++ b/express-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.8.1"
   },
   "devDependencies": {
